# openloop

./: .env.example  Dockerfile  README.md  pyproject.toml
src/openloop/: app.py  config.py
src/openloop/coordination/: __init__.py  lock.py
src/openloop/runtime/: pipeline.py
src/openloop/sessions/: delivery.py  postgres.py  runner.py  store.py
src/openloop/surfaces/: approvals.py  slack.py
src/openloop/tools/: coding_worker.py
src/openloop/workflows/: engine.py  store.py
tests/e2e/: test_postgres.py
tests/integration/: test_coordination_wiring.py  test_runtime_workflow.py
tests/unit/: test_coordination.py  test_sessions.py  test_slack_delivery.py  test_workflows.py
